feat: added overflow for content area

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -212,7 +212,27 @@
         Ad dicta, deleniti inventore eligendi voluptates autem aliquam. Ullam distinctio natus odio, sapiente, inventore delectus dignissimos nihil quidem voluptates, aliquid incidunt asperiores? Vero nobis pariatur, nihil debitis maiores excepturi enim.
         Repellendus, nam, facilis itaque veritatis dolorem doloremque ducimus atque dignissimos eaque, cumque laborum ipsa a veniam fuga eius neque aperiam velit modi recusandae. Nostrum, minus tenetur minima fuga corrupti officiis.
         Quo eveniet sunt cumque pariatur excepturi architecto aliquid sed sit? Explicabo optio excepturi exercitationem commodi minus? Tempora enim, nemo ut fugit repudiandae cupiditate saepe, officiis impedit quasi commodi, aperiam ipsum.</div>
-        <div class="content-area bg-red-300 flex-1">content</div>
+        <div class="content-area bg-red-300 flex-1 overflow-y-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia modi temporibus eum voluptates optio nemo inventore quia. Quae sunt reiciendis commodi corporis blanditiis mollitia. Architecto, blanditiis? Nesciunt similique modi quibusdam!
+        Eos non veritatis quaerat rem beatae reprehenderit aliquam cupiditate, quis voluptatem ipsam sit ex, mollitia sed, dolor nesciunt totam nihil aliquid dolorum explicabo. Optio fuga aliquid pariatur sapiente dolore voluptate.
+        Neque minus ducimus praesentium autem eum blanditiis dolorum? Eos iste vitae numquam, minus aliquam cupiditate incidunt voluptas! Optio ratione est debitis assumenda modi, ullam dolorum saepe sapiente, rem dignissimos eligendi?
+        Dolorem, est? Sequi veniam voluptates tenetur deserunt provident. Voluptatem commodi cumque molestias ipsum perferendis omnis, officiis eius odio, quae aliquid, quaerat quam corporis laboriosam libero iste ex inventore eaque optio.
+        Natus saepe cupiditate ea dignissimos dolorum placeat velit quis fugit nesciunt hic sapiente quos debitis corporis dolorem possimus ex, dolor, maxime laudantium alias expedita assumenda nostrum. Sequi excepturi odit ipsum.
+        Maiores vero, exercitationem debitis deleniti repellat quos adipisci veniam. Vitae, fuga provident? Accusantium amet voluptatem tenetur aperiam laboriosam atque earum doloremque aut praesentium deleniti. Optio et magni sed rem quae!
+        Voluptates aperiam fuga error tempora dicta repudiandae ipsam nostrum necessitatibus, vero pariatur ipsum est eos sit magnam dolorum cupiditate dolor modi eveniet porro esse! Distinctio ducimus eaque tempora ipsam sint?
+        Natus, fugit accusantium, culpa sint illum eos, repellendus nam optio est error deserunt mollitia saepe! Enim cum quibusdam voluptates iste similique hic itaque saepe! Animi voluptas magnam quaerat possimus voluptatibus?
+        Architecto atque magnam eligendi quidem accusantium repellendus suscipit aperiam fuga deleniti perspiciatis eius iste, reiciendis numquam at fugiat quos? Dignissimos consequatur hic quibusdam iste magni dolor at quos, voluptatum aut.
+        Corrupti repellat qui dolorum provident velit ea repellendus fuga eligendi incidunt, quaerat nostrum aspernatur nihil recusandae quae quis sint asperiores pariatur voluptas nulla illo sed, sunt eum harum? Eaque, voluptates.
+        Voluptatibus incidunt expedita praesentium. Deleniti dignissimos nemo, veniam dicta, ipsa soluta, sed odit quae placeat dolorem fuga officiis aliquid nobis inventore nostrum dolorum exercitationem natus mollitia unde dolores? Laboriosam, sint?
+        Necessitatibus quis culpa exercitationem at voluptatem pariatur sunt iusto veritatis dolore repellat quos consequatur quibusdam magni corporis officia placeat, eaque quae explicabo harum. Dolorem doloribus quam voluptates consectetur, temporibus nemo.
+        Natus saepe cupiditate ea dignissimos dolorum placeat velit quis fugit nesciunt hic sapiente quos debitis corporis dolorem possimus ex, dolor, maxime laudantium alias expedita assumenda nostrum. Sequi excepturi odit ipsum.
+        Maiores vero, exercitationem debitis deleniti repellat quos adipisci veniam. Vitae, fuga provident? Accusantium amet voluptatem tenetur aperiam laboriosam atque earum doloremque aut praesentium deleniti. Optio et magni sed rem quae!
+        Voluptates aperiam fuga error tempora dicta repudiandae ipsam nostrum necessitatibus, vero pariatur ipsum est eos sit magnam dolorum cupiditate dolor modi eveniet porro esse! Distinctio ducimus eaque tempora ipsam sint?
+        Natus, fugit accusantium, culpa sint illum eos, repellendus nam optio est error deserunt mollitia saepe! Enim cum quibusdam voluptates iste similique hic itaque saepe! Animi voluptas magnam quaerat possimus voluptatibus?
+        Architecto atque magnam eligendi quidem accusantium repellendus suscipit aperiam fuga deleniti perspiciatis eius iste, reiciendis numquam at fugiat quos? Dignissimos consequatur hic quibusdam iste magni dolor at quos, voluptatum aut.
+        Corrupti repellat qui dolorum provident velit ea repellendus fuga eligendi incidunt, quaerat nostrum aspernatur nihil recusandae quae quis sint asperiores pariatur voluptas nulla illo sed, sunt eum harum? Eaque, voluptates.
+        Voluptatibus incidunt expedita praesentium. Deleniti dignissimos nemo, veniam dicta, ipsa soluta, sed odit quae placeat dolorem fuga officiis aliquid nobis inventore nostrum dolorum exercitationem natus mollitia unde dolores? Laboriosam, sint?
+        Necessitatibus quis cu 
+      </div>
       </div>
       <div class="bottom bg-blue-100">bottom</div>
     </div>
