feat:adjust background for content

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -4,23 +4,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
-    <link
-      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div class="flex flex-col h-screen">
-      <div class="top bg-blue-100 flex flex-1 overflow-y-hidden">
+      <div class="top  flex flex-1 overflow-y-hidden">
         <div
-          class="sidebar bg-red-500 w-48 flex-none  flex flex-col justify-between"
+          class="sidebar bg-black w-48 flex-none  flex flex-col justify-between"
         >
         <div>one</div>
         <div class="overflow-y-auto">two</div>
         <div>three</div>
       
       </div>
-        <div class="content-area bg-red-300 flex-1 overflow-y-auto">
+        <div class="content-area bg-zinc-800 flex-1 overflow-y-auto">
   
         </div>
       </div>
