feat:adjusted text colors

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -7,21 +7,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="flex flex-col h-screen">
+    <div class="flex flex-col h-screen text-sm text-gray-400">
       <div class="top  flex flex-1 overflow-y-hidden">
         <div
-          class="sidebar bg-black w-48 flex-none  flex flex-col justify-between"
+          class="sidebar bg-black w-48  flex flex-col justify-between"
         >
         <div>one</div>
         <div class="overflow-y-auto">two</div>
         <div>three</div>
       
       </div>
-        <div class="content-area bg-zinc-800 flex-1 overflow-y-auto">
+        <div class="content-area bg-zinc-900 flex-1 overflow-y-auto">
   
         </div>
       </div>
-      <div class="bottom bg-blue-100">bottom</div>
+      <div class="bottom bg-zinc-900 border-t border-zinc-100">bottom</div>
     </div>
   </body>
 </html>
