added home icon

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -4,16 +4,27 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div class="flex flex-col h-screen text-sm text-gray-400">
       <div class="top  flex flex-1 overflow-y-hidden">
         <div
-          class="sidebar bg-black w-48  flex flex-col justify-between"
+          class="sidebar bg-black w-48  flex flex-col justify-between font-semibold"
         >
-        <div>one</div>
-        <div class="overflow-y-auto">two</div>
+        <ul class="py-6">
+          <li class="border-l-4">
+            <a href="#" class="flex items-center mx-4 mt-4">
+              <svg class="fill-current text-white group-hover:text-white h-6 w-6" viewBox="0 0 24 24" width="24" height="24"><path d="M13 20v-5h-2v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-7.59l-.3.3a1 1 0 11-1.4-1.42l9-9a1 1 0 011.4 0l9 9a1 1 0 01-1.4 1.42l-.3-.3V20a2 2 0 01-2 2h-3a2 2 0 01-2-2zm5 0v-9.59l-6-6-6 6V20h3v-5c0-1.1.9-2 2-2h2a2 2 0 012 2v5h3z"/></svg>
+              <span class="ml-2 text-white group-hover:text-white">Home</span>
+            </a>
+           
+          </li>
+          <li></li>
+          <li></li>
+        </ul>
+        <div class="overflow-y-auto">lorem*500</div>
         <div>three</div>
       
       </div>
