feat: Spotify - sidebar complete

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -68,7 +68,11 @@
 
 
 
-        <div>three</div>
+        <div class="border-t border-gray-800 h-16 px-4 py-2 flex items-center group">
+
+          <svg class="fill-current text-gray-600 w-8 h-8 group-hover:text-white" viewBox="0 0 24 24" width="24" height="24"><path class="heroicon-ui" d="M12 22a10 10 0 110-20 10 10 0 010 20zm0-2a8 8 0 100-16 8 8 0 000 16zm1-9h2a1 1 0 010 2h-2v2a1 1 0 01-2 0v-2H9a1 1 0 010-2h2V9a1 1 0 012 0v2z"/></svg>
+          <a href="#" class="font-normal text-gray-500 ml-2 group-hover:text-white">New Playlist</a>
+        </div>
       
       </div>
         <div class="content-area bg-zinc-900 flex-1 overflow-y-auto">
