feat:added bottom height

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -79,7 +79,7 @@
   
         </div>
       </div>
-      <div class="bottom bg-zinc-900 border-t border-zinc-100">bottom</div>
+      <div class="bottom bg-zinc-900 border-t border-zinc-100 h-24 px-5 flex items-center justify-between">bottom</div>
     </div>
   </body>
 </html>
