feat:edited sidebar

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -49,7 +49,7 @@
                   />
                   <path d="M3 8v13a1 1 0 001 1h12v-2H5V8H3z" />
                 </svg>
-                <span class="ml-2 group-hover:text-white">Browse</span>
+                <span class="ml-2 group-hover:text-white">Search</span>
               </a>
             </li>
             <li class="border-l-4 border-transparent">
@@ -75,7 +75,7 @@
                     </g>
                   </g>
                 </svg>
-                <span class="ml-2 group-hover:text-white2">Radio</span>
+                <span class="ml-2 group-hover:text-white2">Your Library</span>
               </a>
             </li>
           </ul>
