--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -35,20 +35,19 @@
             <li class="border-l-4 border-transparent">
               <a
                 href="#"
-                class="flex items-center hover:text-white mx-4 mt-4 group"
+                class="flex items-center mx-4 mt-4 group"
               >
-                <svg
-                  class="fill-current text-gray-400 h-6 w-6 group-hover:text-white"
-                  width="24"
-                  height="24"
-                >
-                  <path fill="none" d="M15 5.414V7h1.586z" />
-                  <path fill="none" d="M14 9a1 1 0 01-1-1V4H9v12h9V9h-4z" />
-                  <path
-                    d="M20 17V8h-.009a.996.996 0 00-.284-.707l-5-5A.99.99 0 0014 2.01V2H8a1 1 0 00-1 1v14a1 1 0 001 1h11a1 1 0 001-1zM15 5.414L16.586 7H15V5.414zM9 16V4h4v4a1 1 0 001 1h4v7H9z"
-                  />
-                  <path d="M3 8v13a1 1 0 001 1h12v-2H5V8H3z" />
-                </svg>
+              <svg
+              class="fill-current text-gray-400 h-6 w-6  group-hover:text-white  "
+              viewBox="0 0 24 24"
+              width="24"
+              height="24"
+            >
+              <path
+                class="heroicon-ui"
+                d="M16.32 14.9l5.39 5.4a1 1 0 01-1.42 1.4l-5.38-5.38a8 8 0 111.41-1.41zM10 16a6 6 0 100-12 6 6 0 000 12z"
+              />
+            </svg>
                 <span class="ml-2 group-hover:text-white">Search</span>
               </a>
             </li>
@@ -57,24 +56,7 @@
                 href="#"
                 class="flex items-center hover:text-white mx-4 mt-4 group"
               >
-                <svg
-                  class="fill-current text-gray-400 h-6 w-6 group-hover:text-white"
-                  viewBox="0 0 24 24"
-                >
-                  <g data-name="Layer 2">
-                    <g data-name="radio">
-                      <path
-                        d="M12 8a3 3 0 00-1 5.83 1 1 0 000 .17v6a1 1 0 002 0v-6a1 1 0 000-.17A3 3 0 0012 8zm0 4a1 1 0 111-1 1 1 0 01-1 1zM3.5 11a6.87 6.87 0 012.64-5.23 1 1 0 10-1.28-1.54A8.84 8.84 0 001.5 11a8.84 8.84 0 003.36 6.77 1 1 0 101.28-1.54A6.87 6.87 0 013.5 11z"
-                      />
-                      <path
-                        d="M16.64 6.24a1 1 0 00-1.28 1.52A4.28 4.28 0 0117 11a4.28 4.28 0 01-1.64 3.24A1 1 0 0016 16a1 1 0 00.64-.24A6.2 6.2 0 0019 11a6.2 6.2 0 00-2.36-4.76zM8.76 6.36a1 1 0 00-1.4-.12A6.2 6.2 0 005 11a6.2 6.2 0 002.36 4.76 1 1 0 001.4-.12 1 1 0 00-.12-1.4A4.28 4.28 0 017 11a4.28 4.28 0 011.64-3.24 1 1 0 00.12-1.4z"
-                      />
-                      <path
-                        d="M19.14 4.23a1 1 0 10-1.28 1.54A6.87 6.87 0 0120.5 11a6.87 6.87 0 01-2.64 5.23 1 1 0 001.28 1.54A8.84 8.84 0 0022.5 11a8.84 8.84 0 00-3.36-6.77z"
-                      />
-                    </g>
-                  </g>
-                </svg>
+              <svg class="fill-current text-gray-400 h-6 w-6  group-hover:text-white"  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
                 <span class="ml-2 group-hover:text-white2">Your Library</span>
               </a>
             </li>
