feat:fisinished bottom section

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -60,38 +60,40 @@
                 <span class="ml-2 group-hover:text-white2">Your Library</span>
               </a>
             </li>
+
+            <li class="border-l-4 border-transparent mt-10">
+              <a
+                href="#"
+                class="flex items-center hover:text-white mx-4 mt-4 group"
+              >
+              <svg class="fill-current text-gray-400 h-6 w-6  group-hover:text-white"  clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m20 20h-15.25c-.414 0-.75.336-.75.75s.336.75.75.75h15.75c.53 0 1-.47 1-1v-15.75c0-.414-.336-.75-.75-.75s-.75.336-.75.75zm-1-17c0-.478-.379-1-1-1h-15c-.62 0-1 .519-1 1v15c0 .621.52 1 1 1h15c.478 0 1-.379 1-1zm-9.25 6.75v-3c0-.414.336-.75.75-.75s.75.336.75.75v3h3c.414 0 .75.336.75.75s-.336.75-.75.75h-3v3c0 .414-.336.75-.75.75s-.75-.336-.75-.75v-3h-3c-.414 0-.75-.336-.75-.75s.336-.75.75-.75z" fill-rule="nonzero"/></svg>
+                <span class="ml-2 group-hover:text-white2">Create Playlist</span>
+              </a>
+            </li>
+            <li class="border-l-4 border-transparent">
+              <a
+                href="#"
+                class="flex items-center hover:text-white mx-4 mt-4 group"
+              >
+              <svg class="fill-current text-gray-400 h-6 w-6  group-hover:text-white"  clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m12 5.72c-2.624-4.517-10-3.198-10 2.461 0 3.725 4.345 7.727 9.303 12.54.194.189.446.283.697.283s.503-.094.697-.283c4.977-4.831 9.303-8.814 9.303-12.54 0-5.678-7.396-6.944-10-2.461z" fill-rule="nonzero"/></svg>
+                <span class="ml-2 group-hover:text-white2">Liked Songs</span>
+              </a>
+            </li>
+            <li class="border-l-4 border-transparent">
+              <a
+                href="#"
+                class="flex items-center hover:text-white mx-4 mt-4 group"
+              >
+              <svg class="fill-current text-gray-400 h-6 w-6  group-hover:text-white"  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M17 6v13.583l-3-2.634-3 2.634v-13.583h6zm2-2h-10v20l5-4.39 5 4.39v-20zm-12-2h8v-2h-10v20l2-1.756v-16.244z"/></svg>
+                <span class="ml-2 group-hover:text-white2">Your Episodes</span>
+              </a>
+            </li>
+
+            
+
+
           </ul>
           <div class="overflow-y-auto px-5 mt-2 sidebar-spotify">
-            <h3
-              class="uppercase tracking-widest text-gray-500 font-bold text-sm"
-            >
-              Your Library
-            </h3>
-            <ul class="leading-relaxed">
-              <li class="truncate">
-                <a href="#" class="hover:text-white">Made For You</a>
-              </li>
-              <li class="truncate">
-                <a href="#" class="hover:text-white">Recently Played</a>
-              </li>
-              <li class="truncate">
-                <a href="#" class="hover:text-white">Liked Songs</a>
-              </li>
-              <li class="truncate">
-                <a href="#" class="hover:text-white">Albums</a>
-              </li>
-              <li class="truncate">
-                <a href="#" class="hover:text-white">Artists</a>
-              </li>
-              <li class="truncate">
-                <a href="#" class="hover:text-white">Podcasts</a>
-              </li>
-            </ul>
-            <h3
-              class="uppercase tracking-widest text-gray-500 font-bold text-xs mt-6"
-            >
-              Playlists
-            </h3>
             <ul class="leading-relaxed mb-6">
               <li class="truncate">
                 <a href="#" class="hover:text-white">Acoustic Hits</a>
@@ -140,29 +142,22 @@
               <li class="truncate">
                 <a href="#" class="hover:text-white">iTunes</a>
               </li>
+              <li class="truncate">
+                <a href="#" class="hover:text-white">Get Turnt</a>
+              </li>
+              <li class="truncate">
+                <a href="#" class="hover:text-white">iTunes</a>
+              </li>
+              <li class="truncate">
+                <a href="#" class="hover:text-white">Get Turnt</a>
+              </li>
+              <li class="truncate">
+                <a href="#" class="hover:text-white">iTunes</a>
+              </li>
             </ul>
           </div>
 
-          <div
-            class="border-t border-gray-800 h-16 px-4 py-2 flex items-center group"
-          >
-            <svg
-              class="fill-current text-gray-600 w-8 h-8 group-hover:text-white"
-              viewBox="0 0 24 24"
-              width="24"
-              height="24"
-            >
-              <path
-                class="heroicon-ui"
-                d="M12 22a10 10 0 110-20 10 10 0 010 20zm0-2a8 8 0 100-16 8 8 0 000 16zm1-9h2a1 1 0 010 2h-2v2a1 1 0 01-2 0v-2H9a1 1 0 010-2h2V9a1 1 0 012 0v2z"
-              />
-            </svg>
-            <a
-              href="#"
-              class="font-normal text-gray-500 ml-2 group-hover:text-white"
-              >New Playlist</a
-            >
-          </div>
+          
         </div>
         <div class="content bg-zinc-900 flex-1 flex flex-col">
           <div class="top-bar flex items-center justify-between px-4 py-2">
