feat:changed backgronds

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -98,7 +98,7 @@
 
 
           </ul>
-          <div class="overflow-y-auto px-5 mt-2 sidebar-spotify  ">
+          <div class="overflow-y-auto px-5 mt-2 sidebar-spotify font-medium  ">
             <ul class="leading-8 mb-6 border-t border-gray-500">
               <li class="truncate mt-2">
                 <a href="#" class="hover:text-white">Acoustic Hits</a>
@@ -164,7 +164,7 @@
 
           
         </div>
-        <div class="content bg-zinc-900 flex-1 flex flex-col">
+        <div class="content bg-neutral-900 flex-1 flex flex-col">
           <div class="top-bar flex items-center justify-between px-4 py-2">
             <div class="flex items-center">
               <button>
@@ -203,7 +203,7 @@
         </div>
       </div>
       <div
-        class="bottom bg-zinc-900 border-t h-24 px-5 flex items-center justify-between"
+        class="bottom bg-neutral-900 border-t h-24 px-5 flex items-center justify-between"
       >
         <div class="flex items-center font-bold">
           <a href=""
@@ -216,7 +216,7 @@
               Yürek
             </div>
             <div
-              class="text-xs text-gray-500 hover:text-white hover:underline hover:cursor-pointer"
+              class="text-xs text-gray-400 hover:text-white hover:underline hover:cursor-pointer"
             >
               Yavuz Akyacızı,Funda Akyazıcı
             </div>
@@ -247,7 +247,7 @@
             </button>
             <button class="ml-8">
               <svg
-                class="fill-current text-gray-400 hover:text-white h-8 w-8"
+                class="fill-current text-white hover:text-white h-8 w-8"
                 viewBox="0 0 20 20"
               >
                 <path
