feat: Spotify - finished top bar

--- a/3-solo-project-spotify-clone/index.html
+++ b/3-solo-project-spotify-clone/index.html
@@ -14,12 +14,15 @@
     <div class="flex flex-col h-screen text-sm text-gray-400">
       <div class="top flex flex-1 overflow-y-hidden">
         <div
-          class="sidebar bg-black w-48 flex flex-col justify-between font-bold "
+          class="sidebar bg-black w-48 flex flex-col justify-between font-bold"
         >
           <ul class="py-6">
             <li>
-              <a href="#" class="flex items-center mx-4 ml-6 font-extrabold text-white text-2xl">
-              ...
+              <a
+                href="#"
+                class="flex items-center mx-4 ml-6 font-extrabold text-white text-2xl"
+              >
+                ...
               </a>
             </li>
             <li class="border-l-4">
@@ -38,21 +41,18 @@
               </a>
             </li>
             <li class="border-l-4 border-transparent">
-              <a
-                href="#"
-                class="flex items-center mx-4 mt-4 group"
-              >
-              <svg
-              class="fill-current text-gray-400 h-6 w-6  group-hover:text-white  "
-              viewBox="0 0 24 24"
-              width="24"
-              height="24"
-            >
-              <path
-                class="heroicon-ui"
-                d="M16.32 14.9l5.39 5.4a1 1 0 01-1.42 1.4l-5.38-5.38a8 8 0 111.41-1.41zM10 16a6 6 0 100-12 6 6 0 000 12z"
-              />
-            </svg>
+              <a href="#" class="flex items-center mx-4 mt-4 group">
+                <svg
+                  class="fill-current text-gray-400 h-6 w-6 group-hover:text-white"
+                  viewBox="0 0 24 24"
+                  width="24"
+                  height="24"
+                >
+                  <path
+                    class="heroicon-ui"
+                    d="M16.32 14.9l5.39 5.4a1 1 0 01-1.42 1.4l-5.38-5.38a8 8 0 111.41-1.41zM10 16a6 6 0 100-12 6 6 0 000 12z"
+                  />
+                </svg>
                 <span class="ml-2 group-hover:text-white">Search</span>
               </a>
             </li>
@@ -61,7 +61,17 @@
                 href="#"
                 class="flex items-center hover:text-white mx-4 mt-4 group"
               >
-              <svg class="fill-current text-gray-400 h-6 w-6  group-hover:text-white"  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
+                <svg
+                  class="fill-current text-gray-400 h-6 w-6 group-hover:text-white"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"
+                  />
+                </svg>
                 <span class="ml-2 group-hover:text-white2">Your Library</span>
               </a>
             </li>
@@ -71,8 +81,23 @@
                 href="#"
                 class="flex items-center hover:text-white mx-4 mt-4 group"
               >
-              <svg class="fill-current text-gray-400 h-6 w-6  group-hover:text-white"  clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m20 20h-15.25c-.414 0-.75.336-.75.75s.336.75.75.75h15.75c.53 0 1-.47 1-1v-15.75c0-.414-.336-.75-.75-.75s-.75.336-.75.75zm-1-17c0-.478-.379-1-1-1h-15c-.62 0-1 .519-1 1v15c0 .621.52 1 1 1h15c.478 0 1-.379 1-1zm-9.25 6.75v-3c0-.414.336-.75.75-.75s.75.336.75.75v3h3c.414 0 .75.336.75.75s-.336.75-.75.75h-3v3c0 .414-.336.75-.75.75s-.75-.336-.75-.75v-3h-3c-.414 0-.75-.336-.75-.75s.336-.75.75-.75z" fill-rule="nonzero"/></svg>
-                <span class="ml-2 group-hover:text-white2">Create Playlist</span>
+                <svg
+                  class="fill-current text-gray-400 h-6 w-6 group-hover:text-white"
+                  clip-rule="evenodd"
+                  fill-rule="evenodd"
+                  stroke-linejoin="round"
+                  stroke-miterlimit="2"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="m20 20h-15.25c-.414 0-.75.336-.75.75s.336.75.75.75h15.75c.53 0 1-.47 1-1v-15.75c0-.414-.336-.75-.75-.75s-.75.336-.75.75zm-1-17c0-.478-.379-1-1-1h-15c-.62 0-1 .519-1 1v15c0 .621.52 1 1 1h15c.478 0 1-.379 1-1zm-9.25 6.75v-3c0-.414.336-.75.75-.75s.75.336.75.75v3h3c.414 0 .75.336.75.75s-.336.75-.75.75h-3v3c0 .414-.336.75-.75.75s-.75-.336-.75-.75v-3h-3c-.414 0-.75-.336-.75-.75s.336-.75.75-.75z"
+                    fill-rule="nonzero"
+                  />
+                </svg>
+                <span class="ml-2 group-hover:text-white2"
+                  >Create Playlist</span
+                >
               </a>
             </li>
             <li class="border-l-4 border-transparent">
@@ -80,7 +105,20 @@
                 href="#"
                 class="flex items-center hover:text-white mx-4 mt-4 group"
               >
-              <svg class="fill-current text-gray-400 h-6 w-6  group-hover:text-white"  clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m12 5.72c-2.624-4.517-10-3.198-10 2.461 0 3.725 4.345 7.727 9.303 12.54.194.189.446.283.697.283s.503-.094.697-.283c4.977-4.831 9.303-8.814 9.303-12.54 0-5.678-7.396-6.944-10-2.461z" fill-rule="nonzero"/></svg>
+                <svg
+                  class="fill-current text-gray-400 h-6 w-6 group-hover:text-white"
+                  clip-rule="evenodd"
+                  fill-rule="evenodd"
+                  stroke-linejoin="round"
+                  stroke-miterlimit="2"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="m12 5.72c-2.624-4.517-10-3.198-10 2.461 0 3.725 4.345 7.727 9.303 12.54.194.189.446.283.697.283s.503-.094.697-.283c4.977-4.831 9.303-8.814 9.303-12.54 0-5.678-7.396-6.944-10-2.461z"
+                    fill-rule="nonzero"
+                  />
+                </svg>
                 <span class="ml-2 group-hover:text-white2">Liked Songs</span>
               </a>
             </li>
@@ -89,16 +127,22 @@
                 href="#"
                 class="flex items-center hover:text-white mx-4 mt-4 group"
               >
-              <svg class="fill-current text-gray-400 h-6 w-6  group-hover:text-white"  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M17 6v13.583l-3-2.634-3 2.634v-13.583h6zm2-2h-10v20l5-4.39 5 4.39v-20zm-12-2h8v-2h-10v20l2-1.756v-16.244z"/></svg>
+                <svg
+                  class="fill-current text-gray-400 h-6 w-6 group-hover:text-white"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M17 6v13.583l-3-2.634-3 2.634v-13.583h6zm2-2h-10v20l5-4.39 5 4.39v-20zm-12-2h8v-2h-10v20l2-1.756v-16.244z"
+                  />
+                </svg>
                 <span class="ml-2 group-hover:text-white2">Your Episodes</span>
               </a>
             </li>
-
-            
-
-
           </ul>
-          <div class="overflow-y-auto px-5 mt-2 sidebar-spotify font-medium  ">
+          <div class="overflow-y-auto px-5 mt-2 sidebar-spotify font-medium">
             <ul class="leading-8 mb-6 border-t border-gray-500">
               <li class="truncate mt-2">
                 <a href="#" class="hover:text-white">Acoustic Hits</a>
@@ -161,21 +205,35 @@
               </li>
             </ul>
           </div>
-
-          
         </div>
         <div class="content bg-neutral-900 flex-1 flex flex-col">
           <div class="top-bar flex items-center justify-between px-4 py-2">
             <div class="flex items-center">
               <button>
                 <svg
-                  class="fill-current text-white  hover:text-white h-8 w-8"
-                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12-5.373-12-12-12-12 5.373-12 12zm7.58 0l5.988-5.995 1.414 1.416-4.574 4.579 4.574 4.59-1.414 1.416-5.988-6.006z"/></svg>
+                  class="fill-current text-white hover:text-white h-8 w-8"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12-5.373-12-12-12-12 5.373-12 12zm7.58 0l5.988-5.995 1.414 1.416-4.574 4.579 4.574 4.59-1.414 1.416-5.988-6.006z"
+                  />
+                </svg>
               </button>
               <button class="ml-1">
                 <svg
-                class="fill-current text-white  hover:text-white h-8 w-8 ml-4"
-                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-1.568 18.005l-1.414-1.415 4.574-4.59-4.574-4.579 1.414-1.416 5.988 5.995-5.988 6.005z"/></svg>
+                  class="fill-current text-white hover:text-white h-8 w-8 ml-4"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-1.568 18.005l-1.414-1.415 4.574-4.59-4.574-4.579 1.414-1.416 5.988 5.995-5.988 6.005z"
+                  />
+                </svg>
               </button>
               <div class="ml-4 relative">
                 <input
@@ -197,6 +255,29 @@
                   </svg>
                 </div>
               </div>
+            </div>
+            <div
+              class="flex items-center bg-neutral-800 rounded-full mr-10 p-1 text-white"
+            >
+              <button>
+                <img src="me.jpg" class="w-6 h-6 rounded-full object-cover" />
+              </button>
+              <a href="#" class="ml-2 hover:underline hover:text-white"
+                >Fulya</a
+              >
+              <button class="ml-4">
+                <svg
+                  class="fill-current text-white hover:text-white w-6 h-6"
+                  viewBox="0 0 24 24"
+                  width="24"
+                  height="24"
+                >
+                  <path
+                    class="heroicon-ui"
+                    d="M15.3 9.3a1 1 0 011.4 1.4l-4 4a1 1 0 01-1.4 0l-4-4a1 1 0 011.4-1.4l3.3 3.29 3.3-3.3z"
+                  />
+                </svg>
+              </button>
             </div>
           </div>
           <div class="content-area overflow-y-auto content-spotify"></div>
@@ -222,7 +303,20 @@
             </div>
           </div>
           <div class="ml-6">
-            <svg class="w-5 h-5 fill-current text-green-500 hover:text-white" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m12 5.72c-2.624-4.517-10-3.198-10 2.461 0 3.725 4.345 7.727 9.303 12.54.194.189.446.283.697.283s.503-.094.697-.283c4.977-4.831 9.303-8.814 9.303-12.54 0-5.678-7.396-6.944-10-2.461z" fill-rule="nonzero"/></svg>
+            <svg
+              class="w-5 h-5 fill-current text-green-500 hover:text-white"
+              clip-rule="evenodd"
+              fill-rule="evenodd"
+              stroke-linejoin="round"
+              stroke-miterlimit="2"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="m12 5.72c-2.624-4.517-10-3.198-10 2.461 0 3.725 4.345 7.727 9.303 12.54.194.189.446.283.697.283s.503-.094.697-.283c4.977-4.831 9.303-8.814 9.303-12.54 0-5.678-7.396-6.944-10-2.461z"
+                fill-rule="nonzero"
+              />
+            </svg>
           </div>
         </div>
         <div class="player-controls flex-col justify-center">
